Fetch and Select calendar (gAPI)

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "google-api": {
-    "refresh_token": "1/OmsNp3SwcitEEqduEts0UORfwSBCJkr4YJkerJ957TY"
+    "refresh_token": "1/wBBNNzrNXVsTv16xcI-QX8JxVIWe1bZpIUYTsL2F7Hc",
+    "calendarId": "o2ji6af3iqges3tkj6tuonp8hs@group.calendar.google.com"
   }
 }
