--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "alarm-clock-core",
-  "version": "0.0.0",
+  "name": "gapi-alarmclock",
+  "version": "0.1.0",
   "author": "Sandhose <quentingliech@gmail.com>",
   "description": "An Alarm-Clock based on Node, using the Google APIs",
   "scripts": {
     "start": "grunt"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sandhose/gapi-alarmclock.git"
+  },
   "dependencies": {
     "nconf": "~0.6.9",
     "underscore": "~1.5.2",
     "winston": "~0.7.2",
-    "googleapis": "~0.4.7"
+    "googleapis": "~0.4.7",
+    "speaker": "0.0.10",
+    "lame": "~1.0.3"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
