--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "An Alarm-Clock based on Node, using the Google APIs",
   "scripts": {
     "start": "grunt",
-    "test": "grunt travis --verbose"
+    "test": "grunt travis"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
     "underscore": "~1.5.2",
     "winston": "~0.7.2",
     "googleapis": "~0.4.7",
-    "speaker": "0.0.10",
+    //"speaker": "0.0.10", // sould be installed manually
     "lame": "~1.0.3"
   },
   "devDependencies": {
