Bind de l'interface vers l'api

--- a/config.json
+++ b/config.json
@@ -1,1 +1,6 @@
-{}
+{
+  "google-api": {
+    "refresh_token": "1/Y7_vBudhDp24sap6JckNpCZ-xUNbGm_PH7hH4HGR96Q",
+    "calendarId": "o2ji6af3iqges3tkj6tuonp8hs@group.calendar.google.com"
+  }
+}
